--- a/package.json
+++ b/package.json
@@ -9,12 +9,17 @@
   "author": "Adriano Lucas Rodrigues de Almeida",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.3.4",
     "body-parser": "^1.20.1",
     "connect-flash": "^0.1.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "express-handlebars": "^6.0.6",
+    "express-handlebars": "^6.0.7",
+    "express-session": "^1.17.3",
     "flash": "^1.1.0",
-    "nodemon": "^2.0.20"
+    "handlebars": "^4.7.7",
+    "moment": "^2.29.4",
+    "nodemon": "^2.0.20",
+    "session": "^0.1.0"
   }
 }
